# auth-gateway

./: Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
src/: main.rs
src/config/: mod.rs  provide_cert.rs  provide_router.rs
src/handlers/: health_check.rs  mod.rs  register.rs
src/models/: db.rs  user.rs
src/service/: register.rs
